# borsch

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
client/: CMakeLists.txt  ProfileCreateClient.cpp  ProfileCreateClientAsync.cpp  generate.sh  main.cpp  main_async.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: Main.kt
src/main/kotlin/net/crazyproger/borsch/: Main.kt
src/main/kotlin/net/crazyproger/borsch/entity/: Entities.kt  Schema.kt
src/main/kotlin/net/crazyproger/borsch/helloworld/: HelloWorldClient.kt  HelloWorldServer.kt
src/main/kotlin/net/crazyproger/borsch/rpc/: BusinessExceptions.kt  IdentificationInterceptor.kt  Interceptors.kt  MetadataKeys.kt  PlayerService.kt  ProfileCreateService.kt  ServiceDelegates.kt
src/main/kotlin/net/crazyproger/borsch/rpc/service/: AbstractService.kt  Config.kt  ItemsServiceImpl.kt  PlayerService.kt  PlayerServiceImpl.kt  ProfileCreateService.kt  ProfileCreateServiceImpl.kt  TypesServiceImpl.kt
src/main/proto/: error.proto  hello_world.proto  item.proto  player.proto
src/test/kotlin/net/crazyproger/borsch/test/: AbstractAppTest.kt  ClientIdentificationInterceptor.kt  ClientInterceptors.kt  ItemsServiceTest.kt  PlayerServiceTest.kt  ProfileCreateServiceTest.kt  SchemaTest.kt  TypesServiceTest.kt
src/test/resources/: database-test.properties
